# gmail-remote-control

./: .gitignore  README.md  build_all.cmd  run_client.cmd  run_server.cmd  send_email.cmd
email_reader_client/: client.cpp  client.h
email_reader_client/.cmake/api/v1/reply/: cache-v2-c40095d88a6afd79d2c4.json  cmakeFiles-v1-48eb7ed7d291be7bba4f.json  codemodel-v2-ef8e429b246f1a2c33d6.json  directory-.-Debug-3e98ae0b250d75b4a415.json  index-2025-07-04T14-01-27-0321.json  target-QT_TEST-Debug-044b33ce354314d57ed6.json  target-QT_TEST_autogen-Debug-43a8d11d3832e25721cc.json  target-QT_TEST_autogen_timestamp_deps-Debug-835dc642f470001394b7.json
email_reader_client/info/: email.json
email_reader_client/request/: request.h
email_reader_client/src/: read.py  sending.py
email_reader_client/ui/: .ninja_deps  .ninja_log  .qt-license  CMakeCache.txt  CMakeCache.txt.prev  CMakeLists.txt  build.ninja  cmake_install.cmake  myclass.cpp  myclass.h  myclass.ui
email_reader_client/ui/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
email_reader_client/ui/.qtc_clangd/: compile_commands.json
email_reader_client/ui/.qtc_clangd/.cache/clangd/index/: QDir.6C1BF24E7E3760CF.idx  QFileSystemWatcher.0792EDB4F5328D89.idx  QJsonDocument.0E15382A1A2AC7CF.idx  QJsonParseError.ED29985D195C0864.idx  QTextBrowser.092271FB80BD4AB0.idx  QTextStream.2563DD2A00503D01.idx  assert.h.AEACF222DA7EA651.idx  bcrypt.h.FCA07D6684380D34.idx  (+156 more)
server_app/: CMakeLists.txt  server.cpp  server.h
server_app/include/: ProcessManager.hpp
server_app/src/: ProcessManager.cpp  captureScreen.cpp  webcam.cpp
